css/style.css
/* COLOR SCHEMA */
:root {
  --color-very-light: #ebd3f8;
  --color-light: #ad49e1;
  --color-dark: #7a1cac;
  --color-very-dark: #2e073f;
}

html,
body {
  overflow: auto;
  height: 100%;
  width: 100%;
  margin: 0;
  padding: 0;
  font-family: "Roboto";
  font-size: 16px;
}

/* BACKGROUND VIDEO */
#bg-video {
  position: fixed;
  top: 0;
  left: 0;
  width: 100%;
  height: 100%;
  object-fit: cover;
  z-index: -10;
}

.navbar-container {
  display: flex;
  justify-content: center;
  position: absolute;
  width: 100%;
  top: 50px;
  z-index: 1000;
}

.navbar {
  background-color: rgba(229, 217, 242, 0.75);
  width: 75%;
  border-radius: 15px;
  padding: 10px 60px;
}

.nav-links,
#logo-text,
#logo-image {
  background-color: transparent;
}

.content-container {
  display: flex;
  justify-content: center;
  width: 100%;
  z-index: 1000;
  position: absolute;
  top: 300px;
}

#content {
  background-color: rgba(229, 217, 242, 0.75);
  width: 75%;
  border-radius: 15px;
  padding: 10px 60px;
  display: flex;
  height: auto;
  overflow: auto;
  flex-wrap: wrap;
  align-items: start;
  justify-content: space-between;
  position: relative;
}

.product-card {
  width: 300px;
  padding: 10px;
  margin: 10px;
  background-color: var(--color-dark);
  align-self: flex-start;
}

.product-card img {
  width: 200px;
}

#logo-text {
  font-size: 60px;
  font-family: "Tektur";
  color: var(--color-very-dark);
  display: inline-block;
  align-self: center;
}

#logo-image {
  width: 150px;
}

.flex-row {
  display: flex;
}

.flex-col {
  display: flex;
  flex-direction: column;
}

.justify-around {
  justify-content: space-around;
}

.justify-between {
  justify-content: space-between;
}

.items-center {
  display: flex;
  align-items: center;
}

.gap-5 {
  gap: 5px;
}

.gap-10 {
  gap: 10px;
}

.gap-20 {
  gap: 20px;
}

.bg-color-very-light {
  background-color: var(--color-very-light);
}

.text-color-dark {
  color: var(--color-very-dark);
}

.nav-button {
  font-size: 40px;
  padding: 20px;
}

.transparent {
  opacity: 75%;
}

/* Responsive Design */
@media screen and (max-width: 768px) {
  .navbar {
    width: 90%;
    padding: 10px 20px;
    margin: 0 auto; /* Centers the navbar */
  }

  #content {
    width: 90%;
    padding: 10px 20px;
    margin: 0 auto; /* Centers the content */
  }

  .nav-links {
    display: flex;
    justify-content: space-between; /* Adds space between nav links */
  }

  #logo-text {
    font-size: 40px;
  }

  #logo-image {
    width: 100px;
  }

  .nav-button {
    font-size: 30px;
  }
}

@media screen and (max-width: 480px) {
  .navbar {
    width: 90%;
    padding: 10px;
    margin: 0 auto; /* Centers the navbar */
  }

  #content {
    width: 90%;
    padding: 10px;
    margin: 0 auto; /* Centers the content */
  }

  .nav-links {
    display: flex;
    justify-content: space-between; /* Adds space between nav links */
  }

  #logo-text {
    font-size: 30px;
  }

  #logo-image {
    width: 80px;
  }

  .nav-button {
    font-size: 20px;
  }
}

